--- a/res/org/lwjgl/demo/demos-data.properties
+++ b/res/org/lwjgl/demo/demos-data.properties
@@ -213,7 +213,7 @@ description=In this part we will see how callbacks work. Callbacks mean any meth
             <p>\
             When LWJGL 3 maps this concept of a function type into Java, it provides the user (that means you) with a Java \
             interface type that contains a single method. This method has the same (or similar) signature and return type as the \
-            native callback function. If you want to see an example, look at {@link GLFWMouseButtonCallbackI}. It is an interface \
+            native callback function. If you want to see an example, look at <code>GLFWMouseButtonCallbackI</code>. It is an interface \
             with a single non-default method which must be implemented and will be called whenever the native library calls the \
             callback.\
             <p>\
