--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
     id 'application'
-    id 'org.graalvm.buildtools.native' version '0.9.10'
+    id 'org.graalvm.buildtools.native' version '0.9.11'
     id 'com.google.osdetector' version '1.7.0'
 }
 
 tasks.wrapper {
-    gradleVersion = '7.4.1'
+    gradleVersion = '7.4.2'
     distributionType = Wrapper.DistributionType.ALL
 }
 
@@ -38,8 +38,8 @@ def getCurrentPlatform() {
 ext {
     lwjglVersion = project.version
     jomlVersion = '1.10.5-SNAPSHOT'
-    swtMavenVersion = '3.116.100'  //contains Eclipse SWT 4.9.4.4 software
-    graalvmVersion = '22.0.0.2'
+    swtMavenVersion = '3.119.0'  //contains Eclipse SWT 4.9.5.0 software
+    graalvmVersion = '22.1.0.1'
 
     //LWJGL modules used: minimal OpenGL, plus bgfx, cuda, jemalloc, par, shaderc, vma, vulkan
     lwjglModules = [
@@ -204,11 +204,13 @@ task uberJar(type: Jar) {
 //remove unneeded .dll/.txt files
 task removeUnneededDllFiles {
     doLast {
-        ant.move(todir: "$buildDir/tmp/$nativeImageDirName") {
-            fileset(dir: "$buildDir/$nativeImageDirName") {
-                include name: '*.dll'
-                include name: '*.pdb'
-                include name: '*.txt'
+        if (file("$buildDir/$nativeImageDirName").exists()) {
+            ant.move(todir: "$buildDir/tmp/$nativeImageDirName") {
+                fileset(dir: "$buildDir/$nativeImageDirName") {
+                    include name: '*.dll'
+                    include name: '*.pdb'
+                    include name: '*.txt'
+                }
             }
         }
         if (file("$buildDir/$nativeImageDirName/reports").exists()) {
@@ -238,6 +240,11 @@ graalvmNative {
             //buildArgs.add('-H:+TraceNativeToolUsage')
 
             useFatJar = false
+            if (currentPlatform.startsWith('windows')) {
+                //temp fix for the "Unsupported OptionOrigin" error in GraalVM 22.1.0 version in Windows
+                //(see https://github.com/oracle/graal/issues/4502)
+                useArgFile = false
+            }
         }
     }
 }
