--- a/graal-cfg/windows/META-INF/native-image/reflect-config.json
+++ b/graal-cfg/windows/META-INF/native-image/reflect-config.json
@@ -48,11 +48,13 @@
 },
 {
   "name":"java.nio.DirectByteBuffer",
-  "allDeclaredFields":true
+  "allDeclaredFields":true,
+  "unsafeAllocated":true
 },
 {
   "name":"java.nio.DirectCharBufferU",
-  "allDeclaredFields":true
+  "allDeclaredFields":true,
+  "unsafeAllocated":true
 },
 {
   "name":"java.nio.DirectDoubleBufferU",
@@ -60,11 +62,13 @@
 },
 {
   "name":"java.nio.DirectFloatBufferU",
-  "allDeclaredFields":true
+  "allDeclaredFields":true,
+  "unsafeAllocated":true
 },
 {
   "name":"java.nio.DirectIntBufferU",
-  "allDeclaredFields":true
+  "allDeclaredFields":true,
+  "unsafeAllocated":true
 },
 {
   "name":"java.nio.DirectLongBufferU",
@@ -80,6 +84,9 @@
 },
 {
   "name":"java.security.MessageDigestSpi"
+},
+{
+  "name":"java.security.SecureRandomParameters"
 },
 {
   "name":"java.security.interfaces.RSAPrivateKey"
@@ -277,7 +284,8 @@
   "allDeclaredFields":true,
   "allDeclaredMethods":true,
   "allDeclaredConstructors":true,
-  "allDeclaredClasses":true
+  "allDeclaredClasses":true,
+  "unsafeAllocated":true
 },
 {
   "name":"org.lwjgl.assimp.AIColor4D",
@@ -354,42 +362,48 @@
   "allDeclaredFields":true,
   "allDeclaredMethods":true,
   "allDeclaredConstructors":true,
-  "allDeclaredClasses":true
+  "allDeclaredClasses":true,
+  "unsafeAllocated":true
 },
 {
   "name":"org.lwjgl.bgfx.BGFXInit",
   "allDeclaredFields":true,
   "allDeclaredMethods":true,
   "allDeclaredConstructors":true,
-  "allDeclaredClasses":true
+  "allDeclaredClasses":true,
+  "unsafeAllocated":true
 },
 {
   "name":"org.lwjgl.bgfx.BGFXInstanceDataBuffer",
   "allDeclaredFields":true,
   "allDeclaredMethods":true,
   "allDeclaredConstructors":true,
-  "allDeclaredClasses":true
+  "allDeclaredClasses":true,
+  "unsafeAllocated":true
 },
 {
   "name":"org.lwjgl.bgfx.BGFXMemory",
   "allDeclaredFields":true,
   "allDeclaredMethods":true,
   "allDeclaredConstructors":true,
-  "allDeclaredClasses":true
+  "allDeclaredClasses":true,
+  "unsafeAllocated":true
 },
 {
   "name":"org.lwjgl.bgfx.BGFXPlatformData",
   "allDeclaredFields":true,
   "allDeclaredMethods":true,
   "allDeclaredConstructors":true,
-  "allDeclaredClasses":true
+  "allDeclaredClasses":true,
+  "unsafeAllocated":true
 },
 {
   "name":"org.lwjgl.bgfx.BGFXResolution",
   "allDeclaredFields":true,
   "allDeclaredMethods":true,
   "allDeclaredConstructors":true,
-  "allDeclaredClasses":true
+  "allDeclaredClasses":true,
+  "unsafeAllocated":true
 },
 {
   "name":"org.lwjgl.bgfx.BGFXTransientIndexBuffer",
@@ -410,7 +424,8 @@
   "allDeclaredFields":true,
   "allDeclaredMethods":true,
   "allDeclaredConstructors":true,
-  "allDeclaredClasses":true
+  "allDeclaredClasses":true,
+  "unsafeAllocated":true
 },
 {
   "name":"org.lwjgl.demo.bgfx.Bump",
@@ -902,21 +917,24 @@
   "allDeclaredFields":true,
   "allDeclaredMethods":true,
   "allDeclaredConstructors":true,
-  "allDeclaredClasses":true
+  "allDeclaredClasses":true,
+  "unsafeAllocated":true
 },
 {
   "name":"org.lwjgl.system.libffi.FFIClosure",
   "allDeclaredFields":true,
   "allDeclaredMethods":true,
   "allDeclaredConstructors":true,
-  "allDeclaredClasses":true
+  "allDeclaredClasses":true,
+  "unsafeAllocated":true
 },
 {
   "name":"org.lwjgl.system.libffi.FFIType",
   "allDeclaredFields":true,
   "allDeclaredMethods":true,
   "allDeclaredConstructors":true,
-  "allDeclaredClasses":true
+  "allDeclaredClasses":true,
+  "unsafeAllocated":true
 },
 {
   "name":"org.lwjgl.util.par.ParShapesMesh",
@@ -2052,6 +2070,10 @@
 },
 {
   "name":"sun.security.pkcs.SignerInfo[]"
+},
+{
+  "name":"sun.security.provider.DRBG",
+  "methods":[{"name":"<init>","parameterTypes":["java.security.SecureRandomParameters"] }]
 },
 {
   "name":"sun.security.provider.SHA",
