--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
         <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
         <maven.shade.plugin.version>3.2.4</maven.shade.plugin.version>
         <lwjgl.version>${project.version}</lwjgl.version>
-        <swt.maven.version>3.116.100</swt.maven.version> <!-- contains Eclipse SWT 4.9.4.4 software -->
+        <swt.maven.version>3.119.0</swt.maven.version> <!-- contains Eclipse SWT 4.9.5.0 software -->
         <joml.version>1.10.5-SNAPSHOT</joml.version>
-        <native.maven.plugin.version>0.9.10</native.maven.plugin.version>
+        <native.maven.plugin.version>0.9.11</native.maven.plugin.version>
         <native.image.dir.name>native-image-${platform}</native.image.dir.name>
-        <graalvm.version>22.0.0.2</graalvm.version>
+        <graalvm.version>22.1.0.1</graalvm.version>
         <exec.mainClass>org.lwjgl.demo.DemoLauncher</exec.mainClass>
         <!-- default exec application is the demo launcher, but specific demo class
              can be launched directly via the following property during mvn invoke.
@@ -324,6 +324,9 @@
                         <buildArg>-H:Path=${project.build.directory}/${native.image.dir.name}</buildArg>
                     </buildArgs>
                     <skip>false</skip>
+                    <!-- temp fix for the "Unsupported OptionOrigin" error in GraalVM 22.1.0 version in Windows
+                         (see https://github.com/oracle/graal/issues/4502) -->
+                    <useArgFile>false</useArgFile>
                     <!-- use the uber jar for native image compiling 
                          if long classpath is a problem in Windows
                     -->
